--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <meta content='width=device-width; height=device-height; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;' name='viewport' />
     <meta name="viewport" content="width=device-width" />
     <meta name="license" content="
-        Copyright 2013 Google, Abram Hindle, Omar Almokdad
+        Copyright 2017 Google, Abram Hindle, Omar Almokdad
 
         Licensed under the Apache License, Version 2.0 (the "License");
         you may not use this file except in compliance with the License.
@@ -27,7 +27,6 @@
     <canvas id="c" width="100%" height="100%" style="-webkit-tap-highlight-color: transparent;"></canvas>
 
     <script>
-      // Fix me
 var canvas = document.getElementById('c');
 var host = window.location.host;
 var context = canvas.getContext("2d");
@@ -88,6 +87,7 @@ function makeid()
 }
 
 
+// Client-side version of the world
 world = {};
 
 clientId = makeid();
@@ -117,6 +117,7 @@ function prepEntity(entity) {
     return entity;
 }
 
+// Prettier background
 function clearFrame() {
     with(context) {
 	moveTo(0,0);
@@ -252,7 +253,7 @@ mouse = (function() {
             e.preventDefault();
             if (self.wasClicked(e)) {
                 var pos = getPosition(e);
-                var x = pos[0];    
+                var x = pos[0];
                 var y = pos[1];
 	        if (self.clicked != 0) {
 	            //self.squeakin(x,y);
@@ -282,7 +283,7 @@ mouse = (function() {
 })();
 
 // Add the application specific mouse listeners!
-//XXX: TODO Make these prettier!
+// Prettier by each client having different colors (randomly)
 mouse.mousedowners.push(function(x,y,clicked,e) {
     addEntityWithoutName({'x':x,'y':y,'colour':'blue'});
 });
@@ -299,7 +300,7 @@ mouse.mousedraggers.push(function(x,y,clicked,e) {
 
 
 function update() {
-    renderFrame();
+    renderFrame();  // Draw it out
 }
 
 
@@ -320,12 +321,13 @@ function wsSetup() {
         debug("WebSocket Error:" + msg.data);
     };
     socket.onmessage = function(msg) {
+      // parse the json of the message, and update the world with the new data
         try {
             var entity = JSON.parse(msg.data);
             for (var key in entity) {
                 world[key] = entity[key];
             }
-            //XXX: TODO What are you going to do here?
+
         } catch (e) {
             alert("socket on message: " + e);
         }
@@ -334,12 +336,8 @@ function wsSetup() {
 
 wsSetup();
 
-
-
-
 // 30 frames per second
 setInterval( update, 1000/30.0);
-
 
     </script>
 </body>
